# ACCC

./: .gitignore  CMakeLists.txt  README.md  analysis.cpp  analysis.h  attrs.cpp  attrs.h  builtin.cpp  builtin.h  compile.sh  diag.cpp  diag.h  exe  llvm_note.md  main.cpp  main_data  parser.cpp  parser.h  pass.cpp  pass.h  repr.h  stable.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  typead.cpp  typead.h  visitor.h  vtable.h
frontend/: adt.h  analysis.cpp  analysis.h  attrs.h  builtin.cpp  builtin.h  constant.h  diag.cpp  llvm_gen.cpp  llvm_gen.h  parser.cpp  parser.h  pass.cpp  pass.h  repr.cpp  repr.h  stable.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  typead.cpp  typead.h  visitor.h
middleend/mini-llvm/: core.h
middleend/mini-llvm/ir/: bb.h  builder.h  constant.h  ctx.h  inst.h  module.h  type.h  value.h
runtime/: runtime.c  runtime.h
test/: integration.cpp  integration.h  unit.cpp  unit.h
test/data/: integration.json  semantics.json  test_program  test_program1
test/integration/: semantics.cpp  semantics.h  syntactics.h  sytactics.cpp  utils.h
